--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,39 +11,41 @@ pipeline {
             }
         }
   
-    // Building Docker images
-    stage('Building image') {
-      steps{
-        script {
-          dockerImage = docker.build registry
+      # Building Docker images
+      stage('Building image') {
+        steps{
+          script {
+            dockerImage = docker.build registry
+          }
         }
       }
-    }
    
-    // Uploading Docker images into AWS ECR
-    stage('Pushing to ECR') {
-     steps{  
-         script {
+      # Uploading Docker images into AWS ECR
+      stage('Pushing to ECR') {
+        steps{  
+            script {
                 sh 'aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin acct_id.dkr.ecr.us-east-2.amazonaws.com'
                 sh 'docker push acct_id.dkr.ecr.us-east-2.amazonaws.com/your_ecr_repo:latest'
-         }
+            }
         }
       }
    
-         // Stopping Docker containers for cleaner Docker run
-     stage('stop previous containers') {
-         steps {
-            sh 'docker ps -f name=mypythonContainer -q | xargs --no-run-if-empty docker container stop'
-            sh 'docker container ls -a -fname=mypythonContainer -q | xargs -r docker container rm'
-         }
-       }
-      
-    stage('Docker Run') {
-     steps{
-         script {
-                sh 'docker run -d -p 8096:5000 --rm --name mypythonContainer acct_id.dkr.ecr.us-east-2.amazonaws.com/your_ecr_repo:latest'
-            }
+      # Stopping Docker containers for cleaner Docker run
+      stage('stop previous containers') {
+          steps {
+             sh 'docker ps -f name=mypythonContainer -q | xargs --no-run-if-empty docker container stop'
+             sh 'docker container ls -a -fname=mypythonContainer -q | xargs -r docker container rm'
+          }
       }
-    }
+      
+       # Run new container with latest image   
+       stage('Docker Run') {
+          steps{
+             script {
+                sh 'docker run -d -p 8096:5000 --rm --name mypythonContainer acct_id.dkr.ecr.us-east-2.amazonaws.com/your_ecr_repo:latest'
+             }
+          }
+       }
+    
     }
 }
